# McROM

./: .gitignore  .mxproject  CMakeLists.txt  LICENSE  McROM.ioc  README.md  STM32H523xx_FLASH.ld  STM32H523xx_RAM.ld  build_linux.sh  prompt.txt
Core/Inc/: main.h  stm32h5xx_hal_conf.h
Core/Src/: gpio.c  main.c  main_c_3.txt
Documentation/: Diagrams.graffle  PROMPT.md
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
